# scope

./: .gitmodules  CMakeLists.txt  scope.c
glad/include/glad/: gl.h
